# Diff

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup.iss
.github/workflows/: main.yml
src/: App.vue  fl.py  ps.py  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
