[package]
name = "diff"
version = "1.3.0"
description = "A cross-platform diff viewer built with Tauri and Vue."
authors = ["DBAdminX"]
edition = "2021"
license = "MIT"

[lib]
name = "diff_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
